[package]
name = "tpctools"
version = "0.1.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
description = "Tools for generating TPC-H and TPC-DS data sets and converting them to Parquet"
homepage = "https://github.com/andygrove/tpctools/"
repository = "https://github.com/andygrove/tpctools/"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }