[package]
name = "tpctools"
version = "0.1.4"
authors = ["Andy Grove <andygrove73@gmail.com>"]
description = "Utilities for generating TPC-H and TPC-DS data sets"
homepage = "https://github.com/andygrove/tpctools/"
repository = "https://github.com/andygrove/tpctools/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
structopt = { version = "0.3", default-features = false }
async-trait = "0.1.50"
arrow = "6.1.0"
datafusion = "6.0.0"
parquet = "6.1.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }